fix conflict setting.py

--- a/Django_Blog/social_Blog/templates/home.html
+++ b/Django_Blog/social_Blog/templates/home.html
@@ -82,7 +82,7 @@
             
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                 {% static "" as imgSrc %}
+                 {% static "images" as imgSrc %}
                  <img class="d-block img-fluid" src="{{ imgSrc }}/{{ latest_Post.img }}" width="900px" 
                 height="350px">
                  <div class="carousel-caption d-none d-md-block">
