--- a/Django_Blog/social_Blog/templates/logout.html
+++ b/Django_Blog/social_Blog/templates/logout.html
@@ -1,14 +1,79 @@
+{% load static %}
 
-<h1>Logged out</h1>
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	 <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/shop-homepage.css'%}">
+    <style>
+
+    </style>
+
+</head>
+<body>
+
+	  <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Social Blog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item ">
+              <a class="nav-link" href="{% url 'home' %}">Home
+              <!--  <span class="sr-only">(current)</span> -->
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+          <!--  <li class="nav-item">
+              <a class="nav-link" href="#">Logout</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Manage Blog</a>
+            </li> -->
+          </ul>
+        </div>
+      </div>
+    </nav>
+
 <br/>
 
-{% block content %}
-
-<div class="alert alert-success" role= "alert">
-  <strong> You are logged out </strong>
-</div>
-<a href="{% url 'login' %}"> Login </a>
-<a href="{% url 'home' %}"> Home </a>
 
 
-{% endblock%}
+    <h1>Logged out</h1>
+    <br/>
+
+    {% block content %}
+
+    <div class="alert alert-success" role= "alert">
+      <strong> You are logged out </strong>
+    </div>
+  <!--  <a href="{% url 'login' %}"> Login </a>
+    <a href="{% url 'home' %}"> Home </a>
+
+-->
+    {% endblock%}
+
+
+
+
+ <!-- jQuery first then Bootstrap JS -->
+	<script src="{% static 'js/jquery.min.js'%}"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
+</body>
+</html>
