--- a/Django_Blog/social_Blog/templates/base.html
+++ b/Django_Blog/social_Blog/templates/base.html
@@ -46,8 +46,8 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text">
-                    Creative Tim
+                <a href="#" class="simple-text">
+                    Admin Panel
                 </a>
             </div>
             <ul class="nav">
@@ -107,14 +107,20 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="ti-panel"></i>
-								<p>Stats</p>
+                            <a href="{% url 'home' %}">
+                                <i class="ti-home"></i>
+								<p>Home</p>
                             </a>
 						<li>
                             <a href="#">
-								<i class="ti-settings"></i>
-								<p>Settings</p>
+								<i class="ti-user"></i>
+								<p>{{ user.get_username }}</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'logout' %}">
+                                <i class="ti-close"></i>
+                                <p>logout</p>
                             </a>
                         </li>
                     </ul>
@@ -150,8 +156,8 @@
 	<!--  Checkbox, Radio & Switch Plugins -->
 	<script src="{% static 'js/js/bootstrap-checkbox-radio.js' %}"></script>
 
-	  Charts Plugin
-	<script src="{% static  'js/js/chartist.min.js'  %}"></script>
+	  <!-- Charts Plugin
+	<script src="{% static  'js/js/chartist.min.js'  %}"></script> -->
 
 
 
@@ -165,4 +171,5 @@
 
 </html>
 {% endautoescape %}
+
 
