--- a/Django_Blog/social_Blog/templates/users.html
+++ b/Django_Blog/social_Blog/templates/users.html
@@ -6,9 +6,16 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Posts table </h4>
+                                <h4 class="title">Users table </h4>
                                 <a  class="btn btn-success pull-right"  href="{% url 'createuser' %}"  > Create </a>
                             </div>
+                            {% if messages %}
+                                <ul class="messages">
+                            {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                  {% endfor %}
+                                </ul>
+                                {% endif %}
                             <div class="content table-responsive table-full-width">
                         <table class="table table-striped">
                             <thead>
