--- a/Django_Blog/social_Blog/templates/home.html
+++ b/Django_Blog/social_Blog/templates/home.html
@@ -1,7 +1,7 @@
 
 {% load static %}
 
-   
+
 
 
 <!DOCTYPE html>
@@ -17,7 +17,7 @@
     <style>
 
     </style>
-   
+
 </head>
 <body>
 
@@ -64,13 +64,13 @@
             {% for cat in all_Catagories %}
             <div class="list-group-item col-12 row">
                <a href="/social_Blog/{{cat.id}}/showCatPosts/" class="col-6">{{cat.name}}</a>
-               
+
                <a class="btn btn-primary col-6" href="/social_Blog/{{cat.id}}/1/subscribe/">Subscribe</a>
             </div>
-           
+
             {% endfor %}
-           
-           
+
+
           </div>
 
         </div>
@@ -79,16 +79,16 @@
         <div class="col-lg-9">
 
           <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-            
+
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                  {% static "images" as imgSrc %}
-                 <img class="d-block img-fluid" src="{{ imgSrc }}/{{ latest_Post.img }}" width="900px" 
+                 <img class="d-block img-fluid" src="{{ imgSrc }}/{{ latest_Post.img }}" width="900px"
                 height="350px">
                  <div class="carousel-caption d-none d-md-block">
                 <h2>{{latest_Post.title}}</h2>
                 <p>{{latest_Post.text}}</p>
-                
+
                 </div>
               </div>
 
@@ -96,19 +96,19 @@
                 {% if post.id != latest_Post.id %}
                 {% static "" as imgSrc %}
                 <div class="carousel-item">
-                <img class="d-block img-fluid" src="{{ imgSrc }}/{{ post.img }}" width="900px" 
+                <img class="d-block img-fluid" src="{{ imgSrc }}/{{ post.img }}" width="900px"
                 height="350px">
                  <div class="carousel-caption d-none d-md-block">
                 <h2>{{post.title}}</h2>
                 <p>{{post.text}}</p>
-                
+
                 </div>
               </div>
-                {% endif %} 
-               
-              
+                {% endif %}
+
+
                  {% endfor %}
-             
+
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -121,7 +121,7 @@
           </div>
            <h1 style="text-align: center;">Top Posts</h1>
           <div class="row">
-           
+
            {% for post in latest_Posts %}
             <div class="col-lg-6 col-md-6 mb-4">
               <div class="card ">
@@ -131,10 +131,10 @@
                   <h4 class="post-title card-title">
                     {{post.title}}
                   </h4>
-                  
+
                   <p class="card-text">{{post.text}}</p>
                 </div>
-                
+
               </div>
             </div>
             {% endfor %}
@@ -153,12 +153,58 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <!-- Footer -->
+
+    <footer class="py-5 bg-dark pag">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+     {% if posts.has_other_pages %}
+    <ul class="pagination pag" >
+      {% if posts.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ posts.previous_page_number }}">
+      <span >&laquo;</span>
+      <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    {% else %}
+     <li class="page-item disabled">
+      <a class="page-link" href="#">
+      <span >&laquo;</span>
+      <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    {% endif %}
+    {% for i in posts.paginator.page_range %}
+      {% if posts.number == i %}
+    <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+
+    {% else %}
+
+    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+     {% endif %}
+    {% endfor %}
+    {% if posts.has_next %}
+
+    <li class="page-item">
+      <a class="page-link" href="?page={{ posts.next_page_number }}" >
+      <span >&raquo;</span>
+      <span class="sr-only">Next</span>
+      </a>
+    </li>
+    {% else %}
+       <li class="page-item disabled">
+      <a class="page-link" href="?page={{ posts.previous_page_number }}">
+      <span >&laquo;</span>
+      <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    {% endif %}
+  </ul>
+  {% endif %}
       </div>
       <!-- /.container -->
     </footer>
+
 
  <!-- jQuery first then Bootstrap JS -->
 	<script src="{% static 'js/jquery.min.js'%}"></script>
