--- a/Django_Blog/social_Blog/templates/CatPosts.html
+++ b/Django_Blog/social_Blog/templates/CatPosts.html
@@ -142,11 +142,11 @@
            <h1 style="text-align: center;">Top {{cat_name}} Posts</h1>
           <div class="row">
            
-           {% for post in latest_Posts %}
+           {% for post in posts %}
             <div class="col-lg-6 col-md-6 mb-4">
               <div class="card ">
                 {% static "images/" as imgSrc %}
-                <a href="#"><img class="card-img-top" src="{{ imgSrc }}/{{ post.img }}" height="250px" alt=""></a>
+                <a href="{% url 'postDetails' post_id=post.id %}"><img class="card-img-top" src="{{ imgSrc }}/{{ post.img }}" height="250px" alt=""></a>
                 <div class="card-body">
                   <h4 class="post-title card-title">
                     {{post.title}}
